--- a/rpcs3/rpcs3qt/CMakeLists.txt
+++ b/rpcs3/rpcs3qt/CMakeLists.txt
@@ -155,7 +155,7 @@ target_link_libraries(rpcs3_ui
         3rdparty::pugixml
         3rdparty::discordRPC
         3rdparty::hidapi
-        3rdparty::libusb
+        # 3rdparty::libusb
         3rdparty::libpng
         3rdparty::7zip
         3rdparty::wolfssl
